<resources>
    <string name="app_name">艾购梦想</string>
    <string name="submit">提交</string>
    <string name="ok">确定</string>
    <string name="jifen">积分</string>
    <string name="chongzhi">充值</string>
    <string name="qiandao">签到</string>
    <string name="leiji">积分累计规则</string>
    <string name="one">1.第一天签到送50积分</string>
    <string name="two">2.第二天签到送80积分</string>
    <string name="three">3.第三天签到送100积分</string>
    <string name="four">4.第四天签到送100积分</string>
    <string name="five">5.依次继续签到都送100积分</string>
    <string name="six">6.若中途忘签到，则返回第一天签到状态</string>
    <string name="seven">7.中奖后晒单送100积分</string>
    <string name="eight">8.购买一夺宝币送10积分</string>
    <string name="duo">艾购币充值</string>
    <string name="jin">1.选择充值金额</string>
    <string name="fang">2.选择充值方式</string>
    <string name="shu">输入金额</string>
    <string name="zhifubao">支付宝</string>
    <string name="weixinzhifu">微信支付</string>
    <string name="zhifubaosm">推荐拥有支付宝的用户使用</string>
    <string name="weixinsm">推荐已开通微信钱包的用户使用</string>
    <string name="fangjian">梦想小屋邀请</string>
    <string name="newfriend">新朋友</string>
    <string name="haoyou">好友</string>
    <string name="jia">想家您为</string>
    <string name="ta">他的云购好友</string>
    <string name="tade">加入他的云购房间</string>
    <string name="haoma">手机号:</string>
    <string name="ge">个人信息</string>
    <string name="tui">退出当前账号</string>
    <string name="amend">修改头像</string>
    <string name="sexs">性别</string>
    <string name="age">年龄</string>
    <string name="nickname">昵称</string>
    <string name="dizhi">收货地址</string>
    <string name="redct">编辑地址</string>
    <string name="address">地址</string>
    <string name="goods">收货人</string>
    <string name="lian">联系方式</string>
    <string name="xiangxi">详细地址</string>
    <string name="moren">设为默认</string>
    <string name="shuliang">(实物收货地址用户实物奖品中奖后的发货,最多可添加三个)</string>
    <string name="sm">请输入姓名</string>
    <string name="contact">请输入联系方式</string>
    <string name="id">请输入详细地址</string>
    <string name="button">请选择城市</string>
    <string name="choose">请选择</string>
    <string name="record">艾购记录</string>
    <string name="publish">已揭晓</string>
    <string name="ongoing">进行中</string>
    <string name="all">全部</string>
    <string name="cat">加入购物车</string>
    <string name="add_to">追  加</string>
    <string name="thisdangqian">当前进度:</string>
    <string name="select">查看夺宝号></string>
    <string name="zhongjiang">中奖记录</string>
    <string name="lingqu">领取奖品</string>
    <string name="xinyun">幸运码:</string>
    <string name="shai">去晒单</string>
    <string name="mypublish">我的晒单</string>
    <string name="zan">  赞</string>
    <string name="help">帮助反馈</string>
    <string name="fankui">意见反馈</string>
    <string name="wenti">  常见问题</string>
    <string name="guanfanqq">官方客服QQ4006859800</string>
    <string name="guanfandianhua">官方客服热线400-7823742</string>
    <string name="yijian">意见反馈</string>
    <string name="contact_ol">请输入联系方式,如手机号,邮箱,QQ等</string>
    <string name="opinion">欢迎您给我们留下宝贵意见!</string>
    <string name="shaidan">晒单</string>
    <string name="fabu">发布</string>
    <string name="fen">分享你的新鲜事</string>
    <string name="dui">兑换</string>
    <string name="convert">积分兑换</string>
    <string name="immediately">立即兑换</string>
    <string name="liji">选择兑换金额(1000积分=1艾购币)</string>
    <string name="anquan">安全设置</string>
    <string name="xiu">修改密码</string>
    <string name="yun">艾购ID</string>
    <string name="zhang">艾购账号</string>
    <string name="change">修改密码</string>
    <string name="input">请输入原密码</string>
    <string name="newinput">请输入新密码</string>
    <string name="ensure">确定密码</string>
    <string name="fenxiang">分享至</string>
    <string name="copy">复制链接</string>
    <string name="xinglang">新浪微博</string>
    <string name="qq">QQ空间</string>
    <string name="phone">手机QQ</string>
    <string name="friend">朋友圈</string>
    <string name="weixin">微信好友</string>
    <string name="quan">全选</string>
    <string name="dingdan">提交订单</string>
    <string name="baowei">包尾</string>
    <string name="zong">总需</string>
    <string name="renci">人次</string>
    <string name="shengyu">剩余</string>
    <string name="ren">人</string>
    <string name="shanchu">确定要删除吗?</string>
    <string name="quxiao">取消</string>
    <string name="ding">订单</string>
    <string name="zhifu">确定支付</string>
    <string name="qita">其他支付方式</string>
    <string name="yu_e">余额支付</string>
    <string name="jieguo">支付结果</string>
    <string name="gong">恭喜您,参与成功!请等待系统为您揭晓!</string>
    <string name="jixu">继续夺宝</string>
    <string name="cha">查看夺宝记录</string>
    <string name="myfriend">我的好友</string>
    <string name="tianjia">添加好友</string>
    <string name="re">好友邀请</string>
    <string name="chazhao">查找附近的人</string>
    <string name="sou">搜索结果</string>
    <string name="zui">最新揭晓</string>
    <string name="jijiang">即将揭晓</string>
    <string name="shopping">梦想小屋</string>
    <string name="th">商品晒单</string>
    <string name="xiang">分享</string>
    <string name="jisuan">查看计算详情>></string>
    <string name="go_on">立即前往</string>
    <string name="detail">商品详情</string>
    <string name="count">计算详情</string>
    <string name="zhankai">展开详情</string>
    <string name="count_jisuan">截止奖品开奖前后60条购买时间记录,计算中间50条时间记录之和;</string>
    <string name="count_poplenumer">商品所需参与人次</string>
    <string name="count_jieguo">计算结果</string>
    <string name="count_name">用户名</string>
    <string name="count_qiang">抢购时间</string>
    <string name="count_one">1.求和:截止奖品开奖前后60条购买记录,计算中间50条时间记录之和:</string>
    <string name="count_two">2.求余:(时间记录之和)÷(本商品总需参与人次)=?(所得余数)</string>
    <string name="count_three">3.结果:(所得余数)+10000001=???</string>
    <string name="count_four">4.余数是指整数除法中被除数未被除尽部分,如7÷3=2......1,1就是余数</string>
    <string name="daojishi">揭晓倒计时</string>
    <string name="newshopping_wangqi">往期揭晓</string>
    <string name="newshopping_shai">往期晒单</string>
    <string name="newshopping_jilu">往期记录</string>
    <string name="newshopping_tuwen">图文详情</string>
    <string name="record_cayu">参与记录</string>
    <string name="record_zhongjiang">中奖记录</string>
    <string name="record_shaidan">晒单记录</string>
    <string name="add_room">创建房间</string>
    <string name="add_goods">添加商品</string>
    <string name="please_friend">邀请好友</string>
    <string name="tong">好友通过</string>
    <string name="buy">开始抢购</string>
    <string name="add_shopping">添加你的商品</string>
    <string name="tishi">提示:最多可创建3间房间哦~</string>
    <string name="each">商品搜索</string>
    <string name="sousuo">搜索你喜欢的商品</string>
    <string name="lijijia">立即加入房间</string>
    <string name="haoyouainggou">邀请好友抢购</string>
    <string name="chakan">查看夺宝号>></string>
    <string name="over_one">完成</string>
    <string name="genghuan">更换商品</string>
    <string name="delete">删除房间</string>
    <string name="duobaohao">夺宝号</string>
    <string name="share_dateil">晒单详情</string>
    <string name="pinglun">评论:</string>
    <string name="shopping_cat">加入购物车</string>
    <string name="goods_share">商品晒单</string>
    <string name="zhuanpan">幸运转盘</string>
    <string name="dangdi">当地特色</string>
    <string name="xianshi">显示全部  ></string>
    <string name="qie">切换</string>
    <string name="chou">艾购抽奖</string>
    <string name="chengshi">城市行政区</string>
    <string name="dingwei">当前定位城市</string>
    <string name="hot">热门城市</string>
    <string name="danqian">当前城市:</string>
    <string name="zuijin">最近访问城市</string>
    <string name="all_city">全部城市</string>
    <string name="allshopping">所有商品</string>
    <string name="allshopping01">当地特色</string>
    <string name="allshopping02">限购专区</string>
    <string name="allshopping03">十元专区</string>
    <string name="allshopping04">电脑办公</string>
    <string name="allshopping05">手机数码</string>
    <string name="allshopping06">家具家纺</string>
    <string name="allshopping07">美食天下</string>
    <string name="allshopping08">化妆护肤</string>
    <string name="allshopping09">礼品箱包</string>
    <string name="allshopping10">运动户外</string>
    <string name="allshopping11">精品电器</string>
    <string name="allshopping12">服装百货</string>
    <string name="allshopping13">虚拟充值</string>
    <string name="allshopping14">其他商品</string>
    <string name="shoppinggon">立即抢购</string>
    <string name="jiahao">+</string>
    <string name="jianhao">-</string>
    <string name="edit">请输入手机号/ID号</string>
    <string name="photo">选择相册</string>
    <string name="phonenumber">请输入手机号码</string>
    <string name="yes">已同意</string>
    <string name="yesoron">是否同意</string>
    <string name="tongyi">同意</string>
    <string name="butonyi">不同意</string>
    <string name="myduobao">我的艾购币</string>
    <string name="level">我的等级</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="carmara">拍照</string>
    <string name="photo_ol">从手机相册上传</string>
    <string name="level_ol">等级</string>
    <string name="level_one">等级:</string>
    <string name="level_instructions">等级说明</string>
    <string name="upgrade">如何升级?</string>
    <string name="upgrade_content">使用艾购梦想每支付1元即可获得100经验值，经验值用来提
        升您当前的等级！</string>
    <string name="role">等级有什么用?</string>
    <string name="answer">等级是您在艾购梦想中地位的体现，小伙伴们赶紧提升您的等
        级，感受众人膜拜吧！</string>
    <string name="yilian">等级一览</string>
    <string name="level_name">等级名称</string>
    <string name="level_experience">所需经验值</string>
    <string name="level_photo">等级图标</string>
    <string name="save">保存</string>
    <string name="shopping_address">您尚未添加任何地址赶快去添加吧!</string>
    <string name="default_address">设置默认地址</string>
    <string name="address_delete">删除</string>
    <string name="editor">编辑</string>
    <string name="addressdelet">删除地址</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="no_photo">相册没有图片</string>
    <string name="preview">预览</string>
    <string name="album">相册</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="heji">合计:</string>
    <string name="baobi">艾购币</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="eachshopping">搜索你喜欢的商品</string>
    <string name="neweach">最近搜索</string>
    <string name="eachlishi">暂无搜索历史</string>
    <string name="single">登录</string>
    <string name="sehzhi">设置</string>
    <string name="zuixin">最新公告</string>
    <string name="jiaru">加入我们</string>
    <string name="startlocation">开始定位</string>
    <string name="stoplocation">停止定位</string>
    <string name="error_code_desc">错误码说明</string>
    <string name="diy_call_back">自定义回调</string>
    <string name="diy_call_back_ps">ps:网络定位由于精度低于gps，计算距离会有部分偏差</string>
    <string name="qa_title">常见问题</string>
    <string name="hight_accuracy_desc">高精度定位模式下，会同时使用GPS、Wifi和基站定位，返回的是当前条件下精度最好的定位结果</string>
    <string name="saving_battery_desc">低功耗定位模式下，仅使用网络定位即Wifi和基站定位，返回的是当前条件下精度最好的网络定位结果</string>
    <string name="device_sensor_desc">仅用设备定位模式下，只使用用户的GPS进行定位。这个模式下，由于GPS芯片锁定需要时间，首次定位速度会需要一定的时间</string>
    <string name="error_code_detail"> 61 ： GPS定位结果\n
        62 ： 扫描整合定位依据失败。此时定位结果无效。\n
        63 ： 网络异常，没有成功向服务器发起请求。此时定位结果无效。\n
        65 ： 定位缓存的结果。\n
        66 ： 离线定位结果。通过requestOfflineLocaiton调用时对应的返回结果\n
        67 ： 离线定位失败。通过requestOfflineLocaiton调用时对应的返回结果\n
        68 ： 网络连接失败时，查找本地离线定位时对应的返回结果\n
        161： 表示网络定位结果\n
        162~167： 服务端定位失败\n
        502：key参数错误\n
        505：key不存在或者非法\n
        601：key服务被开发者自己禁用\n
        602：key mcode不匹配\n
        501～700：key验证失败\n</string>
</resources>