<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:fitsSystemWindows="true"
              android:background="@color/layout_back"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/biaotigao"
            android:orientation="horizontal"
            android:background="@color/tiltle"
            android:gravity="center"
            >
        <Button
                android:id="@+id/imagebutton_amendaddressbackol"
                style="@style/layout_anniuH"
                android:drawableLeft="@drawable/arrows_l"
                android:paddingLeft="@dimen/topone"
                android:background="@color/touming"
                android:layout_weight="1"
                />
        <TextView
                style="@style/layout_anniuH"
                android:layout_weight="3"
                android:textSize="@dimen/shiba"
                android:gravity="center"
                android:textColor="@color/bai"
                android:text="@string/redct"/>
        <TextView
                style="@style/layout_anniuH"
                android:layout_weight="1"
                />
    </LinearLayout>
    <LinearLayout
            android:background="@color/bai"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_width="fill_parent">
        <TextView
                android:layout_marginLeft="@dimen/topone"
                android:text="@string/goods"
                android:paddingTop="@dimen/topthree"
                android:paddingBottom="@dimen/topthree"
                android:textSize="@dimen/shisi"
                android:textColor="@color/hei"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:layout_marginRight="@dimen/topone"
                android:layout_marginLeft="@dimen/w_senven"
                android:id="@+id/edittext_goods_name"
                android:layout_weight="0.46"
                android:hint="@string/sm"
                android:gravity="center_vertical"
                android:textSize="@dimen/shisi"
                android:paddingLeft="@dimen/toptwo"
                android:background="@drawable/edittextback"
                style="@style/layout_anniuH"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginTop="@dimen/biankuangone"
            android:background="@color/bai"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_width="fill_parent">
        <TextView
                android:layout_marginLeft="@dimen/topone"
                android:text="@string/lian"
                android:textColor="@color/hei"
                android:textSize="@dimen/shisi"
                android:paddingTop="@dimen/topthree"
                android:paddingBottom="@dimen/topthree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:layout_marginRight="@dimen/topone"
                android:layout_marginLeft="@dimen/layout_four"
                android:id="@+id/edittext_contact"
                android:layout_weight="0.74"
                android:hint="@string/contact"
                android:gravity="center_vertical"
                android:textSize="@dimen/shisi"
                android:maxLength="11"
                android:phoneNumber="true"
                android:paddingLeft="@dimen/toptwo"
                android:background="@drawable/edittextback"
                style="@style/layout_anniuH"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginTop="@dimen/biankuangone"
            android:background="@color/bai"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_width="fill_parent">
        <TextView
                android:layout_marginLeft="@dimen/topone"
                android:text="@string/address"
                android:textColor="@color/hei"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:textSize="@dimen/shisi"
                android:paddingTop="@dimen/topthree"
                android:paddingBottom="@dimen/topthree"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        <Button
                android:layout_marginRight="@dimen/topone"
                android:id="@+id/button_city"
                style="@style/layout_anniuH"
                android:layout_weight="7.55"
                android:textColor="@color/hei"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/toptwo"
                android:text="@string/button"
                android:textSize="@dimen/shisi"
                android:background="@color/bai"
                />
    </LinearLayout>
    <LinearLayout
            android:layout_marginTop="@dimen/biankuangone"
            android:background="@color/bai"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_width="fill_parent">
        <TextView
                android:layout_marginLeft="@dimen/topone"
                android:text="@string/xiangxi"
                android:textColor="@color/hei"
                android:textSize="@dimen/shisi"
                android:layout_marginTop="@dimen/topthree"
                android:layout_marginBottom="@dimen/topthree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:layout_marginLeft="@dimen/layout_four"
                android:layout_marginRight="@dimen/topone"
                android:id="@+id/edittext_detail_address"
                android:layout_weight="1"
                android:hint="@string/id"
                android:gravity="center_vertical"
                android:textSize="@dimen/shisi"
                android:paddingLeft="@dimen/toptwo"
                android:background="@drawable/edittextback"
                style="@style/layout_anniuH"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginTop="@dimen/biankuangone"
            android:background="@color/bai"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_width="fill_parent">
        <TextView
                android:layout_marginLeft="@dimen/topone"
                android:text="@string/moren"
                android:textColor="@color/hei"
                android:textSize="@dimen/shisi"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        <com.example.cloudAndPurchasing.customcontrol.SwicthView
                android:id="@+id/swicthview"
                android:layout_marginTop="@dimen/biankuangthree"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/topone"
                android:layout_width="@dimen/w_yibai"
                android:layout_height="@dimen/h_six"/>
        <!--
        <RadioGroup
                android:id="@+id/radiogroup_fuxuan"
                android:orientation="horizontal"
                android:layout_marginRight="@dimen/topone"
                android:layout_marginTop="@dimen/topone"
                android:layout_marginBottom="@dimen/topone"
                android:background="@drawable/radiogroupback"
                android:layout_width="@dimen/w_liushiba"
                android:layout_height="@dimen/h_threety"
                >

            <RadioButton
                    android:id="@+id/radiobutton_one"
                    android:button="@null"
                    android:layout_weight="1"
                    android:background="@drawable/radiobuttonback"
                    style="@style/layout_anniuH"/>
            <RadioButton
                    android:id="@+id/radiobutton_two"
                    android:button="@null"
                    android:layout_weight="1"
                    android:checked="true"
                    android:background="@drawable/radiobutton_thisback"
                    style="@style/layout_anniuH"/>
        </RadioGroup>
        -->


    </LinearLayout>
    <TextView
            android:gravity="center"
            android:textColor="@color/huise"
            android:textSize="@dimen/shisan"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/topone"
            android:layout_marginBottom="@dimen/topone"
            android:text="@string/shuliang"
            android:layout_width="fill_parent"/>
    <Button
            android:id="@+id/button_this_ok"
            android:text="@string/ok"
            android:gravity="center"
            android:textColor="@color/bai"
            android:textSize="@dimen/shiwu"
            android:paddingTop="@dimen/topone"
            android:paddingBottom="@dimen/topone"
            android:layout_marginLeft="@dimen/topone"
            android:layout_marginRight="@dimen/topone"
            android:background="@drawable/button_submititem"
            android:layout_height="@dimen/h_wushi"
            android:layout_width="fill_parent"/>
    <TextView
            android:layout_weight="3"
            style="@style/layout_anniuV"/>
    <TextView
            android:layout_weight="3"
            android:background="@color/layout_back"
            style="@style/layout_anniuV"/>
</LinearLayout>