<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center"
              android:background="@color/beijing"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/linearlayout_itemb"
            android:gravity="center"
            android:layout_width="@dimen/h_erbaiqi"
            android:layout_height="@dimen/h_erbaiqi">
        <TextView
                android:layout_width="fill_parent"
                android:background="@color/huibai"
                android:textColor="@color/hei"
                android:gravity="center"
                android:paddingTop="@dimen/toptwo"
                android:layout_marginLeft="@dimen/topone"
                android:layout_marginRight="@dimen/topone"
                android:paddingBottom="@dimen/toptwo"
                android:textSize="@dimen/shiwu"
                android:text="@string/fenxiang"
                android:layout_height="wrap_content"/>
        <LinearLayout
                android:layout_marginTop="@dimen/topone"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/topone"
                android:layout_marginRight="@dimen/topone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <Button
                    android:id="@+id/button_weixin"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/weixin_icon"
                    android:text="@string/weixin"
                    android:gravity="center"
                    android:textSize="@dimen/shier"
                    android:textColor="@color/hei"
                    android:background="@color/touming"
                    style="@style/layout_anniuH"
                    />
            <Button
                    android:id="@+id/button_friend"
                    android:textSize="@dimen/shier"
                    android:textColor="@color/hei"
                    android:text="@string/friend"
                    android:gravity="center"
                    android:drawableTop="@drawable/friend_circle"
                    android:background="@color/touming"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/topone"
                    style="@style/layout_anniuH"
                    />
            <Button
                    android:id="@+id/button_phone_qq"
                    android:layout_weight="1"
                    android:textSize="@dimen/shier"
                    android:drawableTop="@drawable/qq_icon"
                    android:textColor="@color/hei"
                    android:text="@string/phone"
                    android:gravity="center"
                    android:background="@color/touming"
                    android:layout_marginLeft="@dimen/topone"
                    style="@style/layout_anniuH"
                    />
            <Button
                    android:id="@+id/button_qqkongjian"
                    android:textColor="@color/hei"
                    android:textSize="@dimen/shier"
                    android:text="@string/qq"
                    android:drawableTop="@drawable/space_ol"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:background="@color/touming"
                    android:layout_marginLeft="@dimen/topone"
                    style="@style/layout_anniuH"
                    />
        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="@dimen/topone"
                android:layout_marginLeft="@dimen/topone"
                android:layout_marginRight="@dimen/topone"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <Button
                    android:id="@+id/button_xinlang"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/hei"
                    android:drawableTop="@drawable/weibo_icon"
                    android:textSize="@dimen/shier"
                    android:text="@string/xinglang"
                    android:background="@color/touming"
                    style="@style/layout_anniuH"
                    />
            <Button
                    android:id="@+id/button_copy"
                    android:layout_weight="1"
                    android:text="@string/copy"
                    android:drawableTop="@drawable/copy_ol"
                    android:gravity="center"
                    android:textSize="@dimen/shier"
                    android:textColor="@color/hei"
                    android:background="@color/touming"
                    android:layout_marginLeft="@dimen/topone"
                    style="@style/layout_anniuH"
                    />
            <TextView
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/topone"
                    style="@style/layout_anniuH"
                    />
            <TextView
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/topone"
                    style="@style/layout_anniuH"
                    />
        </LinearLayout>
        <ImageButton
                android:id="@+id/imagebutton_cancel"
                android:layout_width="@dimen/w_sishiwu"
                android:src="@drawable/abolish"
                android:background="@color/touming"
                android:layout_marginTop="@dimen/topone"
                android:layout_height="@dimen/h_sishiwu"/>
    </LinearLayout>

</LinearLayout>