<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:fitsSystemWindows="true"
              android:background="@color/huibai"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:background="@color/tiltle"
            android:layout_height="@dimen/biaotigao">
        <Button
                android:id="@+id/imagebutton_helpback"
                android:layout_weight="1"
                android:paddingLeft="@dimen/topone"
                android:drawableLeft="@drawable/arrows_l"
                android:background="@color/touming"
                style="@style/layout_anniuH"/>
        <TextView
                android:layout_weight="3"
                android:gravity="center"
                android:textColor="@color/bai"
                android:textSize="@dimen/shiba"
                android:text="@string/help"
                style="@style/layout_anniuH"/>
        <TextView
                android:layout_weight="1"
                style="@style/layout_anniuH"/>
    </LinearLayout>
    <LinearLayout
            android:layout_weight="2"
            style="@style/layout_x">
        <Button
                android:id="@+id/button_kefu_ol"
                android:paddingTop="@dimen/topthree"
                android:background="@color/bai"
                android:textColor="@color/hei"
                android:textSize="@dimen/shier"
                android:text="@string/guanfandianhua"
                android:drawableTop="@drawable/telephone"
                android:layout_weight="1"
                android:gravity="center"
                style="@style/layout_anniuH"/>
        <Button
                android:id="@+id/button_qq"
                android:background="@color/bai"
                android:drawableTop="@drawable/service_qq"
                android:paddingTop="@dimen/topthree"
                android:layout_marginLeft="@dimen/biankuangone"
                android:text="@string/guanfanqq"
                android:textSize="@dimen/shier"
                android:textColor="@color/hei"
                android:layout_weight="1"
                android:gravity="center"
                style="@style/layout_anniuH"/>
    </LinearLayout>
    <TextView
            android:layout_marginTop="@dimen/biankuangone"
            android:textColor="@color/hei"
            android:textSize="@dimen/shiliu"
            android:background="@color/bai"
            android:paddingLeft="@dimen/topone"
            android:gravity="center_vertical"
            android:text="@string/wenti"
            android:drawableLeft="@drawable/puzzle"
            android:layout_weight="1"
            style="@style/layout_anniuV"/>
    <ListView
            android:id="@+id/listview_fankuicontent"
            android:layout_marginTop="@dimen/biankuangone"
            android:layout_weight="8"
            android:background="@color/bai"
            android:divider="@color/huibai"
            android:dividerHeight="@dimen/biankuangone"
            style="@style/layout_x">

    </ListView>
    <LinearLayout
            android:layout_weight="1"
            android:background="@color/bai"
            style="@style/layout_x">
        <Button
                android:id="@+id/button_fankui"
                android:textColor="@color/bai"
                android:textSize="@dimen/shiba"
                android:text="@string/fankui"
                android:gravity="center"
                android:layout_marginRight="@dimen/topthree"
                android:layout_marginLeft="@dimen/topthree"
                android:layout_marginBottom="@dimen/toptwo"
                android:background="@drawable/button_submititem"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/h_sishi"
                />
    </LinearLayout>

</LinearLayout>