<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="@color/huibai"
              android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:background="@color/tiltle"
            android:gravity="center"
            android:layout_height="44dp">
        <TextView
                style="@style/layout_anniuH"
                android:layout_weight="1"
                />
        <TextView
                style="@style/layout_anniuH"
                android:text="艾购梦想"
                android:textColor="@color/bai"
                android:textSize="@dimen/shiba"
                android:gravity="center"
                android:layout_weight="2"
                />
        <Button
                android:id="@+id/button_addroom"
                style="@style/layout_anniuH"
                android:text="@string/add_room"
                android:visibility="invisible"
                android:textColor="@color/bai"
                android:textSize="@dimen/shiwu"
                android:background="@color/touming"
                android:layout_weight="1"
                />
    </LinearLayout>
    <RadioGroup
            android:id="@+id/radiogroup_surprised"
            android:background="@color/bai"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/biaotigao"
            >
        <RadioButton
                android:id="@+id/radiobutton_shangpin"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:text="@string/zui"
                android:textSize="@dimen/shiwu"
                android:gravity="center"
                android:textColor="@color/radiobutton_textcolor"
                style="@style/layout_anniuH"/>
        <RadioButton
                android:id="@+id/radiobutton_cloud_shopping"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/shopping"
                android:textSize="@dimen/shiwu"
                android:gravity="center"
                android:textColor="@color/radiobutton_textcolor"
                style="@style/layout_anniuH"/>
        <RadioButton
                android:id="@+id/radiobutton_shaidan"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/th"
                android:textSize="@dimen/shiwu"
                android:gravity="center"
                android:textColor="@color/radiobutton_textcolor"
                style="@style/layout_anniuH"/>
    </RadioGroup>
    <android.support.v4.view.ViewPager
            android:id="@+id/viewpager_surprised"
            android:layout_weight="7"
            android:background="@color/bai"
            android:layout_marginTop="@dimen/biankuang"
            style="@style/layout_anniuV"
            />
</LinearLayout>